@@ -303,7 +303,13 @@ local void make_space_gc_true (uintM need, Heap* heapptr)
     if (needed_limit <= heapptr->heap_limit) /* has the GC done its job? */
       return;                                /* yes -> finished */
     /* round up to the next page boundary: */
-    needed_limit = (needed_limit + map_pagesize-1) & -map_pagesize; /* for suer > heapptr->heap_limit */
+    #ifdef GENERATIONAL_GC
+    /* See the comment in handle_fault. */
+    needed_limit = (needed_limit + physpagesize-1) & -physpagesize;
+    #else
+    needed_limit = (needed_limit + map_pagesize-1) & -map_pagesize;
+    #endif
+    /* Here for sure needed_limit > heapptr->heap_limit. */
     /* allocate new memory: */
     if (needed_limit <= mem.conses.heap_limit) { /* avoid crossover */
       var aint mapstart = heapptr->heap_limit;
@@ -366,7 +372,13 @@ local void make_space_gc_false (uintM need, Heap* heapptr)
     if (needed_limit >= heapptr->heap_limit) /* has the GC done its job? */
       return;                                /* yes -> finished */
     /* round down to the next page boundary: */
-    needed_limit = needed_limit & -map_pagesize; /* for sure < heapptr->heap_limit */
+    #ifdef GENERATIONAL_GC
+    /* See the comment in handle_fault. */
+    needed_limit = needed_limit & -physpagesize;
+    #else
+    needed_limit = needed_limit & -map_pagesize;
+    #endif
+    /* Here for sure needed_limit < heapptr->heap_limit. */
     /* allocate new memory: */
     if (needed_limit >= mem.varobjects.heap_limit) { /* avoid crossover */
       begin_system_call();
